Fixed english issues. Added ability to set project language - That affects how a user would get auto translation for that project from google or not. Auto magic translation for project based on the langauge and the user language. Added a few notranslate so the system won’t break on different languages. English and Hebrew looks better and doesnt break on mobile

--- a/src/views/components/google-translate/google-translate.scss
+++ b/src/views/components/google-translate/google-translate.scss
@@ -1,6 +1,7 @@
 #google_translate_element {
   float: left;
-  display: inline-block;
+  display: none; //Change to inline-block to see it
+
   .goog-te-gadget-simple {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -15,14 +16,15 @@
 
 .google-translate-container {
   float: left;
+}
 
-  .close-button {
-    padding: 0;
-    min-width: 0;
-    margin: 0 8px 0 8px;
+.close-button {
+  display: none !important; //Change to inline-block to see it
+  padding: 0;
+  min-width: 0;
+  margin: 0 8px 0 8px;
 
-    .close-icon {
-      font-size: 16px;
-    }
+  .close-icon {
+    font-size: 16px;
   }
 }
